k8s_training/fs-collector_v1/public/resources/kubernetes-dashboard-3.1.0.yaml
---
# Source: kubernetes-dashboard/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
    heritage: "Tiller"
    release: "kubernetes-dashboard"
    chart: "kubernetes-dashboard-3.1.0"
    kubernetes.io/cluster-service: "true"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    nodePort: 30040
  selector:
    app: kubernetes-dashboard
    release: "kubernetes-dashboard"

---
# Source: kubernetes-dashboard/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes-dashboard-kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
    heritage: "Tiller"
    release: "kubernetes-dashboard"
    chart: "kubernetes-dashboard-3.1.0"
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubernetes-dashboard
        heritage: "Tiller"
        release: "kubernetes-dashboard"
        chart: "kubernetes-dashboard-3.1.0"
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: "default"
      nodeSelector:
          {}
          
      containers:
      - name: main
        image: "gcr.io/google_containers/kubernetes-dashboard-amd64:v1.8.3"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
          
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        ports:
        - name: http
          containerPort: 9090
          protocol: TCP

---
# Source: kubernetes-dashboard/templates/ingress.yaml

---
# Source: kubernetes-dashboard/templates/rolebinding.yaml

---
# Source: kubernetes-dashboard/templates/serviceaccount.yaml
